
News
----

Version 0.6.0
^^^^^^^^^^^^^

     * Converted into Python library. Now the simulator can be used
       from a Python session (as well as an application)

     * Added sensitivity functions using automatic differentiation
       (only DC for now)

     * Changed operating point interface ``get_OP()``


Version 0.5.0
^^^^^^^^^^^^^

     * Added instructions to install on MS Windows

     * Added Memductor 

     * Improved graph labels for internal terminals
	
     * Ground node (gnd) made global. Can not be included in
       subcircuit connection list anymore

     * Added extrinsic MOSFET model (as an add-on to intrinsic models)

     * Added BSIM3v3 model

     * Plots no longer block program execution

     * Added support for time delays in nonlinear device models (also
       included in updated documentation)

     * Added a memristor model, gyrator device and option for
       user-defined nonlinear VCCSs

     * Added Curtice cubic MESFET model

     * Default integration method in transient analysis is now ``trap``


Version 0.4.2
^^^^^^^^^^^^^

    * Added automatic test suite

    * Added ``-x`` command line option

    * New, faster sparse-matrix-based nodal implementation using Scipy
      library (pysparse no longer needed)

    * Faster (sparse-matrix-based) transient analysis: saves one
      iteration per time step compared with previous implementation

    * Other minor improvements


Version 0.4.1
^^^^^^^^^^^^^

    * Much better homotopy routines

    * Internal terminal variables can now be plotted from the netlist

    * Improved documentation (Options and Constant tables, Device categories)


Version 0.4.0
^^^^^^^^^^^^^

    * Added sparse matrix support for OP, DC and Tran analyses.
    
    * Added NEWS file and examples directory
    
    * Other general improvements
