@@ -17,6 +17,9 @@ from fsolve import solve, NoConvergenceError
 import nodal
 import nodalSP
 
+# Valid request types
+reqTypes = ['dc']
+
 class DCSweep(ParamSet):
     """
     DC Sweep
